Fix for indi_header width with normal sized main images. Checked for LTR & RTL on firefox, chrome , ie 8, 9, 10 & 11

--- a/themes/colors/css-1.5.3/css/colors.css
+++ b/themes/colors/css-1.5.3/css/colors.css
@@ -2916,6 +2916,7 @@ span.link_text {
 	border-radius: 3px;
 	overflow: hidden;
 	margin: 0 0 5px;
+	width: 100%;
 }
 
 #indi_header a {
