--- a/themes/fab/css-1.5.3/style.css
+++ b/themes/fab/css-1.5.3/style.css
@@ -1751,8 +1751,8 @@ span.link_text {
 #indi_header {
 	overflow: hidden;
 	border-radius: 4px;
-	margin: 0 0 5px;
-	padding: 0 10px;
+	margin: 0 4px 5px;
+	width: 98%;
 }
 
 #indi_header h3 {
@@ -1785,6 +1785,10 @@ span.link_text {
 	display: block;
 	margin: auto;
 	padding: 0 0 0 5px;
+}
+
+#header_accordion1 {
+	padding: 0 10px
 }
 
 #header_accordion1 .indi_name_details {
